--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background: white;
-    font-family:arial, sans-serif;
-    margin: 20px 0;
+  background: white;
+  font-family:arial, sans-serif;
+  margin: 20px 0;
 }
 
 
@@ -10,6 +10,10 @@ body {
 .header {
    margin: 0px 100px;
 }
+
+/*a {
+  text-decoration: none;
+}*/
 
 .icones {
 float: right;
@@ -20,7 +24,6 @@ color: #04C9B7;
   color: grey;
   font-size: small;
   padding-right: 20px;
-
 }
 
 /* BANNER */
@@ -43,11 +46,11 @@ color: #04C9B7;
 }
 
 .banner img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    background-position: center;
-
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  background-position: center;
+  filter: grayscale(90%);
 }
 
 
@@ -61,8 +64,23 @@ color: #04C9B7;
   background-color: #04C9B7;
   color: white;
   padding: 10px;
+  width: 150px;
+  text-align: center;
+  margin-right: 10px;
 }
 
+hr {
+  margin: auto;
+  width: 100%;
+  height: 2px;
+  background-color: lightgrey;
+  border: none;
+}
+
+.ligne {
+  display: inline-flex;
+  width: 100%;
+}
 
 .article {
   display: inline-flex;
@@ -70,7 +88,7 @@ color: #04C9B7;
 
 .text {
   padding-left: 30px;
-
+  font-size: 14px;
 }
 
 .image-article {
@@ -78,22 +96,24 @@ color: #04C9B7;
 }
 
 .une img {
-width: 300px;
+width: 100%;
 
 }
 
 /*PASSION*/
 
 .jesuis {
-  background-color: yellow;
+  background-color: #FFD965;
   color: #223144;
   font-weight: bolder;
-  padding: 5px;
-  font-size: 1000;
+  padding: 7px;
+  margin-left: -7px;
 }
 
 .passionne {
   color: white;
+  padding: 4px;
+  font-weight: normal;
 }
 
 .passion img {
@@ -101,7 +121,7 @@ width: 300px;
   height: 150px;
   object-fit: cover;
   background-position: center;
-
+  padding-top: 10px;
 }
 
 .passion {
@@ -114,5 +134,94 @@ width: 300px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 40px;
+  border:3px solid #FFD965;
+  padding: 5px;
 }
+
+/* HEXA */
+
+.hexa {
+  background-color: #F7F7F7;
+}
+
+.hexagon {
+  position: relative;
+  width: 100px;
+  height: 57.74px;
+  margin: 28.87px 0;
+  background-image: url(https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60);
+  background-size: auto 115.4701px;
+  background-position: center;
+}
+
+.hexTop,
+.hexBottom {
+  position: absolute;
+  z-index: 1;
+  width: 70.71px;
+  height: 70.71px;
+  overflow: hidden;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background: inherit;
+  left: 14.64px;
+}
+
+.hexTop:after,
+.hexBottom:after {
+  content: "";
+  position: absolute;
+  width: 100.0000px;
+  height: 57.73502691896258px;
+  -webkit-transform:  rotate(45deg) scaleY(1.7321) translateY(-28.8675px);
+  -ms-transform:      rotate(45deg) scaleY(1.7321) translateY(-28.8675px);
+  transform:          rotate(45deg) scaleY(1.7321) translateY(-28.8675px);
+  -webkit-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  transform-origin: 0 0;
+  background: inherit;
+}
+
+.hexTop {
+  top: -35.3553px;
+}
+
+.hexTop:after {
+  background-position: center top;
+}
+
+.hexBottom {
+  bottom: -35.3553px;
+}
+
+.hexBottom:after {
+  background-position: center bottom;
+}
+
+.hexagon:after {
+  content: "";
+  position: absolute;
+  top: 0.0000px;
+  left: 0;
+  width: 100.0000px;
+  height: 57.7350px;
+  z-index: 2;
+  background: inherit;
+}
+
+
+.hexagon:hover {
+  background-color: yellow;
+}
+
+/* DOC */
+
+.doc {
+  background-color: lightgrey;
+}
+
+
+
 
