--- a/style.css
+++ b/style.css
@@ -145,25 +145,26 @@ width: 100%;
 
 .cards {
   display: inline-flex;
-  margin: 0px 100px;
+  margin: 0px 100px 12px 90px;
 }
 
 .card-actu {
   overflow: hidden;
   background: white;
+  margin-left: 10px;
 }
 
 .card-actu > img {
-  height: 250px;
-
+  width: 100%;
   object-fit: cover;
-  padding-bottom: 16px
+  padding-bottom: 16px;
+
 }
 
 .card-actu h2 {
   font-size: 16px;
   font-weight: bold;
-  margin: 0;
+  margin: 10px 0;
 }
 
 .card-actu p {
@@ -173,9 +174,42 @@ width: 100%;
 }
 
 .card-actu .card-actu-infos {
-  width: 80%;
+  width: 100%;
 }
 
+.btn-gris {
+  border-radius: 2px;
+  background-color: lightgrey;
+  color: white;
+  padding: 7px 14px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 10px;
+  margin: -7px 0px 10px 0px;
+}
+
+
+.btn-vert {
+  border-radius: 2px;
+  background-color: white;
+  color: #04C9B7;
+  padding: 7px 14px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 10px;
+  border: 2px solid #04C9B7;
+  transition-duration: 0.4s;
+  margin: 10px 0;
+}
+
+.btn-vert:hover {
+  border-radius: 2px;
+  background-color: #04C9B7;
+  color: white;
+  margin: 10px 0;
+}
 
 /* HEXA */
 
